--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   </div>
   <div class="results-list">
     <div class="top-result">
-      <span class="top-result-title">1. TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA &amp; DRUPAL),USE ONE CLICK INSTALLATION:</span>
+      <!--There should be an img here src="./images/index.jpeg" aligned to the right of the box-->
+      <span class="top-result-title">1. TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA &amp; DRUPAL), USE ONE CLICK INSTALLATION:</span>
       <div class="top-result-list">
         <ol>
           <li>Log in to your hosting account.</li>
@@ -53,8 +54,113 @@
         <p class="full-url">https://websitesetup.org/</p>
       </div>
     </div>
-    <ul>
-    </ul>
+    <div class="about-result">
+      <ul>
+        <li><a href="#">About this result</a></li>
+        <li><a href="#">Feedback</a></li>
+      </ul>
+    </div>
+    <div class="search-content">
+      <p class="site-links"><a href="#">With zero coding experience, artist building 180 webpages in 180 days</a></p>
+      <p class="full-url">https://arstechnica.com/.../with-zero-coding-experience-artist-building-180-webpages-...</p>
+      <p class="content-preview">With zero coding experience, artist <span class="emphasis">building</span> 180 <span class="emphasis">webpages</span> in 180 days. "Learning by doing" is taken to the extreme by novice programmer. Jon Brodkin - 7/26/2013, 11:00 AM. One of Jennifer Dewalt's creations, this <span class="emphasis">webpage</span> lets visitors create paintings in the style of Piet Mondriaan. Jennifer Dewalt · reader comments 83.</p>
+    </div>
+    <div class="search-content">
+      <p class="site-links"><a href="#">Google Homepage</a></p>
+      <p class="full-url">swatikumar16.github.io/google-homepage/</p>
+      <p class="content-preview">With zero coding experience, artist <span class="emphasis">building</span> 180 <span class="emphasis">webpages</span> ... arstechnica.com/.../with-zero-coding-experience-artist-<span class="emphasis">build</span>... Ars Technica. Jul 26, 2013 - 117 days ago, having never done any programming in her life, Jennifer Dewalt built her first <span class="emphasis">webpage</span>. The next day, she built another, and she .</p>
+    </div>
+    <div class="search-content">
+      <p class="site-links"><a href="#">I'm learning to code by building 180 websites in 180 ... - Jennifer Dewalt</a></p>
+      <p class="full-url">blog.jenniferdewalt.com/post/.../im-learning-to-code-by-building-180-websites-in</p>
+      <p class="content-preview"><span class="content-date">Jul 24, 2013 -</span> It's hard <span class="emphasis">Building</span> new stuff every day is hard. Coming up with new concepts can be exhausting and switching from brainstorming mode to execution mode isn't seamless. But the hardest thing about this project is that, in a sense, every day I fail. Every <span class="emphasis">website</span> that goes out the door is unfinished and since I'm ...</p>
+    </div>
+    <div class="search-content">
+      <p class="site-links"><a href="#">Make a Website | Codecademy</a></p>
+      <p class="full-url">https://www.codecademy.com/learn/make-a-website</p>
+      <p class="content-preview">Boundaries and Space. Boundaries and Space. Interactive Lesson · PRO. Pro. Amazing Space. Freeform Project · PRO. Pro. Boundaries and Space. Multiple Choice Quiz. 4. <span class="emphasis">Building</span> with Bootstrap. <span class="emphasis">Building</span> with Bootstrap. Interactive Lesson · PRO. Pro. Codebrainery.io. Freeform Project · PRO. Pro. <span class="emphasis">Building</span> with Bootstrap.</p>
+    </div>
+    <div class="search-content">
+      <p class="site-links"><a href="#">How to Make a Website: Step-by-Step Guide for Beginners (2018)</a></p>
+      <p class="full-url">https://websitesetup.org/</p>
+      <p class="content-preview">1. TO CREATE A <span class="emphasis">WEBSITE</span> WITH WORDPRESS (OR JOOMLA &amp; DRUPAL), USE ONE CLICK INSTALLATION: Log in to your hosting account. Go to your control panel. Look for the “WordPress” or “<span class="emphasis">Website</span>” icon. Choose the domain where you want to install your <span class="emphasis">website</span>.</p>
+    </div>
+    <div class="search-content">
+      <p class="site-links"><a href="#">Squarespace: Build a Website</a></p>
+      <p class="full-url">https://www.squarespace.com/</p>
+      <p class="content-preview">Squarespace is the all-in-one solution for anyone looking to create a beautiful <span class="emphasis">website</span>. Domains, eCommerce, hosting, galleries, analytics, and 24/7 support all included.</p>
+    </div>
+    <div class="search-content">
+      <p class="site-links"><a href="#">Wix.com: Free Website Builder | Create a Free Website</a></p>
+      <p class="full-url">https://www.wix.com/</p>
+      <p class="content-preview">We believe anything is possible with the right <span class="emphasis">website</span> builder. That's why we offer a few different ways you can <span class="emphasis">build</span> a <span class="emphasis">website</span>: Wix Artificial Design Intelligence, Wix Editor, and Wix Code. Whether you're about to create a <span class="emphasis">website</span> for the first time or you're a long time pro, we've got you covered. Read on to find out how to get ...</p>
+    </div>
+    <div class="search-content">
+      <p class="site-links"><a href="#">Build a Website – Start Here! - Help for Omeka.net</a></p>
+      <p class="full-url">info.omeka.net/build-a-website/</p>
+      <p class="content-preview">Before <span class="emphasis">building</span> a <span class="emphasis">website</span> in Omeka.net, we recommend you first plan out your content. For advice on thinking about digital projects and planning them before <span class="emphasis">building</span> a <span class="emphasis">website</span>, you might want to browse through Digital History: A Guide to Gathering, Preserving, and, Presenting the Past on the Web, by Dan Cohen and Roy ...</p>
+    </div>
+    <div class="search-content">
+      <p class="site-links"><a href="#">Webnode: Create a free website easily | Free website builder</a></p>
+      <p class="full-url">https://www.webnode.com/</p>
+      <p class="content-preview">You can create and own your <span class="emphasis">website</span> for free for unlimited time. Make a <span class="emphasis">website</span> at Webnode in a matter of minutes!</p>
+    </div>
+    <div class="search-content">
+      <p class="site-links"><a href="#">Create Your Website for Free — Website.com</a></p>
+      <p class="full-url">https://www.website.com/</p>
+      <p class="content-preview">Create your free <span class="emphasis">website</span> and online store. <span class="emphasis">Build</span> your <span class="emphasis">website</span> with easy drag &amp; drop tools and grow your business with ecommerce &amp; SEO solutions. Get Started. Easy and free with no transaction fees. Customer Reviews. Start with a captivating <span class="emphasis">website</span>. <span class="emphasis">Website</span>.com's stunning templates and dynamic drag-and-drop <span class="emphasis">website</span> ...</p>
+    </div>
+    <div class="related-searches-title">
+      <p>Searches related to build this webpage</p>
+    </div>
+    <div class="related-searches-links">
+      <table>
+        <tbody>
+          <tr>
+            <td><a href="#">build <span class="emphasis">a website challenge</span></a></td>
+            <td><a href="#"><span class="emphasis">180 sites</span></a></td>
+          </tr>
+          <tr>
+            <td><a href="#"><span class="emphasis">jennifer dewalt</span></a></td>
+            <td><a href="#"><span class="emphasis">30 websites in 30 days</span></a></td>
+          </tr>
+          <tr>
+            <td><a href="#"><span class="emphasis">website everday</span></a></td>
+            <td><a href="#"><span class="emphasis">how to make a website for free on google</span></a></td>
+          </tr>
+          <tr>
+            <td><a href="#"><span class="emphasis">how to</span> build <span class="emphasis">a website from scratch</span></a></td>
+            <td><a href="#"><span class="emphasis">creating a website for your business</span></a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="gooogle">
+      <img src="./images/gooogle.png">
+    </div>
+    <div class="gooogle-links">
+      <ul>
+        <li><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li><a href="#">6</a></li>
+        <li><a href="#">7</a></li>
+        <li><a href="#">8</a></li>
+        <li><a href="#">9</a></li>
+        <li><a href="#">10</a></li>
+        <li><a href="#"><span class="next">Next</span></a></li>
+      </ul>
+    </div>
+    <div class="footer-links">
+      <ul>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Send Feedback</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
+    </div>
   </div>
 </body>
 </html>
